1) modify the error model. 2) Elixir details API and UI completed. 3) Handle Elixir detail caching. 4) Create another feature module with Elixir Details. 5) Add to Favorite cache is completed.

--- a/features/hometab/src/main/res/values/strings.xml
+++ b/features/hometab/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hint_search_wizard">Search (ex: Fred)</string>
+    <string name="title_wizard_list">Wizard List</string>
+    <string name="elixirs_count">%s Elixirs</string>
+    <string name="title_wizard_details">Wizard Details</string>
+    <string name="title_home_tab">Home</string>
+    <string name="title_favorite_tab">Favorite</string>
 
 </resources>
