1) Favorite List Screen is Completed 2) Dark Mode is Completed

--- a/features/hometab/src/main/res/values/strings.xml
+++ b/features/hometab/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="hint_search_wizard">Search (ex: Fred)</string>
     <string name="title_wizard_list">Wizard List</string>
+    <string name="title_favorite_list">Favorite List</string>
     <string name="elixirs_count">%s Elixirs</string>
     <string name="title_wizard_details">Wizard Details</string>
     <string name="title_home_tab">Home</string>
